--- a/MainCode_PyGamma.ipynb
+++ b/MainCode_PyGamma.ipynb
@@ -14,7 +14,7 @@
         "gv0lnLnGeNBe",
         "nANK0o3lcsup"
       ],
-      "authorship_tag": "ABX9TyOMtb1VV5slpL8jYdOoxmTO",
+      "authorship_tag": "ABX9TyNYSaxAwvB9Mf0Otf/C6oAK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eb024c58-fe30-47a8-9592-13e8ced2cbaf"
+        "outputId": "d856c8ed-be4c-43d1-b0d8-24bf8909d3ac"
       },
       "source": [
         "# Para comentar basta usar o '#'\n",
@@ -97,7 +97,7 @@
         "v = ['posicao_0', 1, 'elemento_3', int(2021), float(9.2), 'final da lista']\n",
         "print(v)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "## Visualização de dados\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -146,10 +146,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "IIcaSQQ5WcbB",
-        "outputId": "287fb10d-4ed7-4cce-c8a4-d81a3fcf856e"
+        "outputId": "cfad2e8c-31e3-42c3-8531-cbd623427824"
       },
       "source": [
         "## Definindo o link\n",
@@ -160,7 +161,7 @@
         "## Exibindo o dataframe - exibindo o cabeçalho\n",
         "display(dt_input.head(2), dt_output.head(2))"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -340,10 +341,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "-e_r5TJlW01k",
-        "outputId": "f21e886e-3404-4578-ee8e-03bc853b234c"
+        "outputId": "70b1f5b5-28f2-480c-9c93-d002e26631f3"
       },
       "source": [
         "# Visualizando com pandas\n",
@@ -358,7 +360,7 @@
         "plt.title('Colocando um título!')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -414,10 +416,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "nq-6cFrxXXGp",
-        "outputId": "3f8a7f22-2468-47d6-cbc9-385b92584558"
+        "outputId": "2b53aa80-846d-4138-907f-38ff394a7087"
       },
       "source": [
         "# Rename\n",
@@ -432,7 +435,7 @@
         "## Exibindo datasets\n",
         "display(dt_input.head(2),dt_output.head(2))"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -603,10 +606,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "O-JioAQGalW3",
-        "outputId": "342923e3-0df3-43f4-bccd-4f9de9e2389c"
+        "outputId": "59fad282-153e-405d-822f-7ddacf456602"
       },
       "source": [
         "# Sincronizando os datasets\n",
@@ -623,7 +627,7 @@
         "## Visualizando o dataset\n",
         "display(dt_tot.head(2))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -753,10 +757,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4W4yeic-ev3T",
-        "outputId": "e52a7421-9350-4d20-bf84-98b3b266cb3d"
+        "outputId": "ba22833b-bf5a-4866-838b-dd5126d28e03"
       },
       "source": [
         "# Cálculo de % dos dados faltantes \n",
@@ -786,7 +791,7 @@
         "## Visualizando o dataset após remover as variáveis usando o laço (for)\n",
         "display(dt_tot.head(2))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,23 +1026,305 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "CyfMtBzFcxf6",
-        "outputId": "87d8a0ba-0d36-4998-a985-d0ed7b04867d"
+        "outputId": "81a37978-b551-4c31-f3ac-9418599f13d5"
       },
       "source": [
-        "dt_tot = dt_tot.fillna(dt_tot.mean()) #interpolate"
+        "dt_tot = dt_tot.fillna(dt_tot.mean(numeric_only=True)) #interpolate\n",
+        "display(dt_tot)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: FutureWarning: DataFrame.mean and DataFrame.median with numeric_only=None will include datetime64 and datetime64tz columns in a future version.\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ],
-          "name": "stderr"
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>FR(m3/dia)</th>\n",
+              "      <th>BODin (ppm)</th>\n",
+              "      <th>CODin (ppm)</th>\n",
+              "      <th>pHin</th>\n",
+              "      <th>Colin(ppm)</th>\n",
+              "      <th>Tin(°C)</th>\n",
+              "      <th>Condin L1</th>\n",
+              "      <th>RF(mm)</th>\n",
+              "      <th>Pulp(ton/dia)</th>\n",
+              "      <th>Pap (ton/dia)</th>\n",
+              "      <th>date</th>\n",
+              "      <th>BODout(ppm)</th>\n",
+              "      <th>CODout (ppm)</th>\n",
+              "      <th>Colout(ppm)</th>\n",
+              "      <th>Tout(°C)</th>\n",
+              "      <th>Condout</th>\n",
+              "      <th>FRout(m3/dia)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>79757</td>\n",
+              "      <td>236.0</td>\n",
+              "      <td>465.0</td>\n",
+              "      <td>6.65</td>\n",
+              "      <td>356.0</td>\n",
+              "      <td>45.448576</td>\n",
+              "      <td>1180.0</td>\n",
+              "      <td>4.8</td>\n",
+              "      <td>878.130</td>\n",
+              "      <td>962.1</td>\n",
+              "      <td>1996-09-01</td>\n",
+              "      <td>74.0</td>\n",
+              "      <td>245.0</td>\n",
+              "      <td>311.0</td>\n",
+              "      <td>33.500000</td>\n",
+              "      <td>1190.0</td>\n",
+              "      <td>84096.8495</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>78818</td>\n",
+              "      <td>270.0</td>\n",
+              "      <td>483.0</td>\n",
+              "      <td>6.04</td>\n",
+              "      <td>433.0</td>\n",
+              "      <td>43.000000</td>\n",
+              "      <td>1230.0</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>925.600</td>\n",
+              "      <td>986.8</td>\n",
+              "      <td>1996-09-02</td>\n",
+              "      <td>88.0</td>\n",
+              "      <td>237.0</td>\n",
+              "      <td>298.0</td>\n",
+              "      <td>33.000000</td>\n",
+              "      <td>1140.0</td>\n",
+              "      <td>79542.4680</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>82039</td>\n",
+              "      <td>292.0</td>\n",
+              "      <td>571.0</td>\n",
+              "      <td>5.39</td>\n",
+              "      <td>287.0</td>\n",
+              "      <td>43.500000</td>\n",
+              "      <td>1030.0</td>\n",
+              "      <td>39.7</td>\n",
+              "      <td>972.600</td>\n",
+              "      <td>1065.0</td>\n",
+              "      <td>1996-09-03</td>\n",
+              "      <td>67.0</td>\n",
+              "      <td>221.0</td>\n",
+              "      <td>297.0</td>\n",
+              "      <td>33.000000</td>\n",
+              "      <td>1115.0</td>\n",
+              "      <td>83813.8935</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>79501</td>\n",
+              "      <td>264.0</td>\n",
+              "      <td>461.0</td>\n",
+              "      <td>5.92</td>\n",
+              "      <td>406.0</td>\n",
+              "      <td>43.000000</td>\n",
+              "      <td>1150.0</td>\n",
+              "      <td>0.8</td>\n",
+              "      <td>744.481</td>\n",
+              "      <td>879.7</td>\n",
+              "      <td>1996-09-04</td>\n",
+              "      <td>44.0</td>\n",
+              "      <td>148.0</td>\n",
+              "      <td>239.0</td>\n",
+              "      <td>33.000000</td>\n",
+              "      <td>780.0</td>\n",
+              "      <td>77323.0000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>82461</td>\n",
+              "      <td>299.0</td>\n",
+              "      <td>471.0</td>\n",
+              "      <td>6.11</td>\n",
+              "      <td>406.0</td>\n",
+              "      <td>43.000000</td>\n",
+              "      <td>1210.0</td>\n",
+              "      <td>26.1</td>\n",
+              "      <td>891.033</td>\n",
+              "      <td>985.8</td>\n",
+              "      <td>1996-09-05</td>\n",
+              "      <td>46.0</td>\n",
+              "      <td>187.0</td>\n",
+              "      <td>306.0</td>\n",
+              "      <td>34.699352</td>\n",
+              "      <td>1160.0</td>\n",
+              "      <td>79284.5050</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1423</th>\n",
+              "      <td>52516</td>\n",
+              "      <td>341.0</td>\n",
+              "      <td>765.0</td>\n",
+              "      <td>7.09</td>\n",
+              "      <td>341.0</td>\n",
+              "      <td>45.500000</td>\n",
+              "      <td>2400.0</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>944.458</td>\n",
+              "      <td>988.0</td>\n",
+              "      <td>2000-07-25</td>\n",
+              "      <td>159.0</td>\n",
+              "      <td>476.0</td>\n",
+              "      <td>159.0</td>\n",
+              "      <td>32.000000</td>\n",
+              "      <td>2230.0</td>\n",
+              "      <td>52220.1835</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1424</th>\n",
+              "      <td>53693</td>\n",
+              "      <td>358.0</td>\n",
+              "      <td>743.0</td>\n",
+              "      <td>7.33</td>\n",
+              "      <td>358.0</td>\n",
+              "      <td>46.000000</td>\n",
+              "      <td>2250.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1017.521</td>\n",
+              "      <td>1078.1</td>\n",
+              "      <td>2000-07-26</td>\n",
+              "      <td>150.0</td>\n",
+              "      <td>478.0</td>\n",
+              "      <td>150.0</td>\n",
+              "      <td>32.000000</td>\n",
+              "      <td>2390.0</td>\n",
+              "      <td>53216.0000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1425</th>\n",
+              "      <td>52215</td>\n",
+              "      <td>367.0</td>\n",
+              "      <td>751.0</td>\n",
+              "      <td>7.44</td>\n",
+              "      <td>367.0</td>\n",
+              "      <td>46.500000</td>\n",
+              "      <td>2150.0</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>1024.428</td>\n",
+              "      <td>1077.7</td>\n",
+              "      <td>2000-07-27</td>\n",
+              "      <td>137.0</td>\n",
+              "      <td>446.0</td>\n",
+              "      <td>137.0</td>\n",
+              "      <td>32.000000</td>\n",
+              "      <td>2340.0</td>\n",
+              "      <td>51561.0000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1426</th>\n",
+              "      <td>53216</td>\n",
+              "      <td>324.0</td>\n",
+              "      <td>751.0</td>\n",
+              "      <td>7.38</td>\n",
+              "      <td>324.0</td>\n",
+              "      <td>46.500000</td>\n",
+              "      <td>2160.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>930.500</td>\n",
+              "      <td>945.4</td>\n",
+              "      <td>2000-07-28</td>\n",
+              "      <td>124.0</td>\n",
+              "      <td>411.0</td>\n",
+              "      <td>124.0</td>\n",
+              "      <td>31.000000</td>\n",
+              "      <td>2270.0</td>\n",
+              "      <td>51654.0000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1427</th>\n",
+              "      <td>51561</td>\n",
+              "      <td>344.0</td>\n",
+              "      <td>701.0</td>\n",
+              "      <td>7.36</td>\n",
+              "      <td>344.0</td>\n",
+              "      <td>45.448576</td>\n",
+              "      <td>2230.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>974.120</td>\n",
+              "      <td>1062.5</td>\n",
+              "      <td>2000-07-29</td>\n",
+              "      <td>147.0</td>\n",
+              "      <td>451.0</td>\n",
+              "      <td>147.0</td>\n",
+              "      <td>32.000000</td>\n",
+              "      <td>1971.0</td>\n",
+              "      <td>51662.0000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>1428 rows × 17 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      FR(m3/dia)  BODin (ppm)  CODin (ppm)  ...   Tout(°C)  Condout  FRout(m3/dia)\n",
+              "0          79757        236.0        465.0  ...  33.500000   1190.0     84096.8495\n",
+              "1          78818        270.0        483.0  ...  33.000000   1140.0     79542.4680\n",
+              "2          82039        292.0        571.0  ...  33.000000   1115.0     83813.8935\n",
+              "3          79501        264.0        461.0  ...  33.000000    780.0     77323.0000\n",
+              "4          82461        299.0        471.0  ...  34.699352   1160.0     79284.5050\n",
+              "...          ...          ...          ...  ...        ...      ...            ...\n",
+              "1423       52516        341.0        765.0  ...  32.000000   2230.0     52220.1835\n",
+              "1424       53693        358.0        743.0  ...  32.000000   2390.0     53216.0000\n",
+              "1425       52215        367.0        751.0  ...  32.000000   2340.0     51561.0000\n",
+              "1426       53216        324.0        751.0  ...  31.000000   2270.0     51654.0000\n",
+              "1427       51561        344.0        701.0  ...  32.000000   1971.0     51662.0000\n",
+              "\n",
+              "[1428 rows x 17 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     }
